src/app/component/dashboard/users/user-details/user-details.component.scss
span.h {
  padding: 1%;
}

.label__active {
  text-align: right;
  padding: 30px 40px 0 0;
}

.gender__radio {
  -webkit-appearance: radio;
  margin-right: 5px;
}

.workTime {
  padding-top: 4%;
}

.noSetWorkTime {
  color: red;
  text-align: center;
  padding-top: 2%;
}

.spinner.loading {
  text-align: center;
  position: absolute;
  top: 50%;
  left: 55%;
}

.disabled-button {
  pointer-events: none;
  opacity: 0.5;
}

.disabled-button:hover {
  pointer-events: none;
  opacity: 0.5;
  cursor: not-allowed;
}

p {
  margin: 0px !important;
}

.updateButton {
  margin-top: 2vh;
  width: 180px;
  padding: 10px;
}

/*.col-sm-2 {
  width: 15% !important;
}*/

.col-sm-2 {
  width: 31% !important;
}

.dropdown-grid {
  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
  font-weight: 500;
  transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
}

.font-weight-bold {
  font-weight: 600 !important;
  margin-left: 15px !important;
}

.text-muted {
  color: #8898aa !important;
}

.mb-0,
.my-0 {
  margin-bottom: 0 !important;
}

.h5,
h5 {
  font-size: 0.8125rem;
}

.status-widget {
  margin: 0 12px;
}

@media (min-width: 768px) {
  .col-md-5 {
    width: 46.666667% !important;
  }
}

.col {
  max-width: 100%;
  flex-basis: 0;
  flex-grow: 1;
  float: left;
}

.col-auto {
  width: auto;
  max-width: 100%;
  flex: 0 0 auto;
  float: right;
}

.bg-gradient-red {
  background: linear-gradient(87deg, #f5365c 0, #f56036 100%) !important;
}

.bg-gradient-orange {
  background: linear-gradient(87deg,#fb6340 0,#fbb140 100%)!important;
}

.bg-gradient-green {
  background: linear-gradient(87deg,#2dce89 0,#2dcecc 100%)!important;
}

.bg-gradient-info {
  background: linear-gradient(87deg,#11cdef 0,#1171ef 100%)!important;
}

.text-white {
  color: #fff !important;
}

.icon-shape {
  display: inline-flex;
  padding: 12px;
  text-align: center;
  border-radius: 50%;
  align-items: center;
  justify-content: center;
}

.icon {
  width: 5rem;
  height: 5rem;
}

.icon .fa {
  font-size: 32px;
}

@media (min-width: 768px) {
  .card-container {
    height: 310px;
  }
}

